# hello-cairo-plugin

./: Cargo.toml  README.md  Scarb.toml
example/: Scarb.toml
example/src/: hello_world.cairo
examples/cairo/: Scarb.toml
examples/cairo/src/: hello_world.cairo
examples/cairo/src/hello_world/: m.cairo
src/: lib.rs  main.rs
src/boilerplate/: compiler.rs  mod.rs  plugin_repository.rs
src/plugin/: compiler.rs  config.rs  insert_hello.rs  macro_plugin.rs  mod.rs  plugin.rs
