[package]
name = "hello_plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-macro = "0.1.0"
cairo-lang-defs = "2.8.2"
cairo-lang-diagnostics = "2.8.2"
cairo-lang-parser = "2.8.2"
cairo-lang-syntax = "2.8.2"
regex = "1.10.6"